tweaked gray levels

--- a/helios.yaml
+++ b/helios.yaml
@@ -1,9 +1,9 @@
 scheme: "Helios"
 author: "Alex Meyer (https://github.com/reyemxela)"
 base00: "1d2021" # ----
-base01: "37393a" # ---
-base02: "515354" # --
-base03: "6b6d6e" # -
+base01: "303335" # ---
+base02: "434749" # --
+base03: "565b5e" # -
 base04: "cdcdcd" # +
 base05: "d5d5d5" # ++
 base06: "dddddd" # +++
